Styling of panel-menus (long strings no longer wrap and break style)

--- a/src/app/components/panel-menu.css
+++ b/src/app/components/panel-menu.css
@@ -7,6 +7,7 @@
 .ui-panelmenu-panel {
     width: 100%;
     margin:10px;
+    overflow: hidden;
 }
 
 .panel-menu-sidebar .ui-panelmenu.ui-widget {
@@ -47,3 +48,11 @@
     top: 10px;
     cursor: pointer;
 }
+
+.tagOperation > a {
+    white-space: nowrap;
+    overflow: hidden;
+    width: 80%;
+    text-align: center;
+}
+
